--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "react-daum-postcode": "^3.1.1",
     "react-icons": "^4.7.1",
     "react-rating-stars-component": "^2.2.0"
   }
