--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+spring.datasource.url=jdbc:oracle:thin:@ 192.168.0.57:1521/orcl
 spring.datasource.username=scott
 spring.datasource.password=tiger
 
@@ -6,3 +6,4 @@ spring.datasource.password=tiger
 
 
 
+ 
