--- a/src/main/front/package.json
+++ b/src/main/front/package.json
@@ -13,10 +13,11 @@
     "net": "^1.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
-    "react-modal": "^3.16.1",
     "react-js-pagination": "^3.0.3",
-    "react-router-dom": "^6.4.5",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
