게시판 틀작성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.datasource.username=scott
 spring.datasource.password=tiger
 
 spring.mvc.servlet.load-on-startup=1
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLInnoDBDialect
+
+# spring.jpa.hibernate.ddl-auto= update
+
+
