--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	compileOnly 'jakarta.websocket:jakarta.websocket-api:2.1.0'
 	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
-}
+	implementation 'commons-io:commons-io:2.11.0'
+	implementation 'commons-fileupload:commons-fileupload:1.4'
+	}
 
 tasks.named('test') {
 	useJUnitPlatform()
