--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:oracle:thin:@192.168.0.57:1521/orcl
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/orcl
 spring.datasource.username=scott
 spring.datasource.password=tiger
 
-spring.jpa.show-sql = true
+#spring.jpa.show-sql = true
 #spring.mvc.servlet.load-on-startup=1
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLInnoDBDialect
 
