--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 logging.level.org.hibernate.type.descriptor.sql=trace
+#spring.jackson.deserialization.adjust-dates-to-context-time-zone=false
+#spring.jackson.time-zone=Asia/Seoul
+#spring.jackson.propertise.hibernate
 
 #spring.jpa.show-sql = true
 #spring.mvc.servlet.load-on-startup=1
