--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 logging.level.org.hibernate.type.descriptor.sql=trace
+
+logging.level.root=info
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 #spring.jackson.deserialization.adjust-dates-to-context-time-zone=false
 #spring.jackson.time-zone=Asia/Seoul
 #spring.jackson.propertise.hibernate
@@ -13,6 +16,6 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 #spring.mvc.servlet.load-on-startup=1
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLInnoDBDialect
 
-# spring.jpa.hibernate.ddl-auto= update
+#spring.jpa.hibernate.ddl-auto=update
 
 
