--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 logging.level.org.hibernate.type.descriptor.sql=trace
 
-logging.level.root=info
+logging.level.root=INFO
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 #spring.jackson.deserialization.adjust-dates-to-context-time-zone=false
 #spring.jackson.time-zone=Asia/Seoul
@@ -19,3 +19,13 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 #spring.jpa.hibernate.ddl-auto=update
 
 #file.dir=D:/files/images/
+#mail.smtp.auth=true
+#mail.smtp.starttls.required=true
+#mail.smtp.starttls.enable=true
+#mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+#mail.smtp.socketFactory.fallback=false
+#mail.smtp.port=465
+#mail.smtp.socketFactory.port=465
+ 
+#AdminMail.id=flsgp0317@gmail.com
+#AdminMail.password=wmprxvltaxhedgyz
