--- a/src/main/front/package.json
+++ b/src/main/front/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
+    "redux-thunk": "^2.4.2",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "styled-components": "^5.3.6",
