--- a/src/main/front/package.json
+++ b/src/main/front/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^2.7.0",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-js-pagination": "^3.0.3",
     "react-kakao-maps-sdk": "^1.1.5",
     "react-modal": "^3.16.1",
